# shoulder

./: .gitignore  LICENSE.md  README.md  data_spline.csv  data_spline_healthy.csv  pyproject.toml  readme.md
src/: angles.py  base.py  canal.py  centerlines.py  head_articular.py  head_central.py  left_right.py  transepicondylar.py  utils.py
src/humeral-csys/: base.py  left_right.py
src/shoulder/: __init__.py  arthroplasty.py  base copy.py  base.py  bone.py  plotting.py  test.py  transform.py  utils.py
src/shoulder/humerus/: anatomic_neck.py  anatomic_neck_old.py  angles.py  bicipital_groove.py  bone_props.py  canal.py  canal_epicondyle.py  epicondyle.py  head_articular.py  left_right.py  mesh.py  proximal_slice.py  radial_derivative.py  resection_plane.py  slice.py  surgical_neck.py  transepicondylar.py
src/shoulder/humerus/models/: RFC_bg.pkl  rfc_bg2.onnx  rfc_bg3.onnx
test_bones/: humerus_left.stl  humerus_left_flipped.stl
tests/: test1.py  test_all.py  test_all_health.py  test_arthritic.py  test_arthroplasty.py  validate_arthritic.py  validate_health.py
tests/test_bones/: humerus_left_trab.stl  humerus_right.stl
